<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:screenOrientation="landscape"
    android:orientation="vertical" >

     <TextView
         android:id="@+id/txtView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="15dip"
         android:layout_marginRight="15dip"
         android:layout_marginTop="15dip"
         android:text="@string/welcome_msg" />

     <EditText
        android:id="@+id/txtPseudo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip" 
        android:inputType="text"
        android:hint="@string/pseudo"
        
        />

     <Button
         android:id="@+id/btnPlay"
         android:layout_width="150dip"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dip"
         android:layout_gravity="center"
         android:text="@string/play" />

</LinearLayout>
